--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,11 +1,13 @@
 <article>
   <header><h1>{{ include.title | default: page.title }}</h1></header>
   <ul class="archive">
-    {% for post in site.posts %}
+    {% for tag in site.tags %}
+    {% for post in tag[0] %}
     <li>
       <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time>
       <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
     </li>
+    {% endfor %}
     {% endfor %}
   </ul>
 </article>
