--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,5 +1,5 @@
 <article>
-  <header><h1>{{ include.title | default: page.title }}</h1></header>
+  <! --- <header><h1>{{ include.title | default: page.title }}</h1></header> --->
   <ul class="archive">
     {% for tag in site.tags %}
     {% for post in tag[1] %}
