--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -3,8 +3,8 @@
     {% for tag in site.tags %}
     {% for post in tag[1] %}
     <li>
-      <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time>
       <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+      {{ post.content | strip_html | truncatewords: 50 }}
     </li>
     {% endfor %}
     {% endfor %}
