--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,12 +1,18 @@
-<article>
-  <ul class="archive">
-    {% for tag in site.tags %}
-    {% for post in tag[1] %}
-    <li>
-      <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
-    </li>
-    {% endfor %}
-    {% endfor %}
-  </ul>
-</article>
+{%- assign posts = paginator.posts | default: site.posts -%}
+{% for tag in site.tags %}
+{% for post in tag[1] %}
+  <article>
+    {% include meta.html post=post preview=true %}
+    {{ post.excerpt }}
+    <div class="more"><a href="{{ post.url | relative_url }}">read more</a></div>
+  </article>
+{% endfor %}
+{% endfor %}
+
+{% if paginator.total_pages > 1 %}
+  <footer>
+    {% if paginator.previous_page %}<a href="{{ paginator.previous_page_path | relative_url }}">« newer posts</a>{% else %}<span></span>{% endif %}
+    <span>page {{ paginator.page }} of {{ paginator.total_pages }}</span>
+    {% if paginator.next_page %}<a href="{{ paginator.next_page_path | relative_url }}">older posts »</a>{% else %}<span></span>{% endif %}
+  </footer>
+{% endif %}
