--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,6 +1,5 @@
-{%- assign xx = paginator.posts | default: site.posts -%}
-{%- assign posts = xx reversed -%}
-{% for post in posts %}
+{%- assign posts = paginator.posts | default: site.posts -%}
+{% for post in paginator.posts reversed %}
   <article>
     {% include meta.html post=post preview=true %}
     {{ post.excerpt }}
