--- a/_includes/home.html
+++ b/_includes/home.html
@@ -2,7 +2,7 @@
 {%- assign ssize = site.posts.size -%}
 
 {% for post in paginator.posts %}
-  {%- assign pp = site.posts[ paginator.page ] -%}
+  {%- assign pp = site.posts[ paginator.page * forloop.index ] -%}
   <article>
     {% include meta.html post=pp preview=true %}
     {{ pp.excerpt }}
