--- a/_includes/home.html
+++ b/_includes/home.html
@@ -2,9 +2,9 @@
 {%- assign ssize = site.posts.size -%}
 
 {% for post in paginator.posts %}
-{% capture vv %}{{ forloop.index }}{% endcapture %}
+{% capture vv %}{{ forloop.index | times: paginator.page }}{% endcapture %}
 
-  {%- assign pp = site.posts[ paginator.page * vv] -%}
+  {%- assign pp = site.posts[ [vv] ] -%}
   <article>
     {% include meta.html post=pp preview=true %}
     {{ pp.excerpt }}
