--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,5 @@
-{%- assign posts = paginator.posts | default: site.posts reversed -%}
+{%- assign ss = site.posts -%}
+{%- assign posts = paginator.posts -%}
 {%- assign ssize = site.posts.size -%}
 
 {% for post in paginator.posts %}
