--- a/_includes/home.html
+++ b/_includes/home.html
@@ -6,6 +6,9 @@
   <article>
     {% include meta.html post=post preview=true %}
     {{ post.excerpt }}
+    hi
+    {{ paginator.page | times: forloop.index}}
+    ih
     <div class="more"><a href="{{ post.url | relative_url }}">read more</a></div>
   </article>
 {% endfor %}
