--- a/_includes/home.html
+++ b/_includes/home.html
@@ -4,7 +4,7 @@
 
 {% for x in paginator.posts %}
 {%- assign ssize = paginator.page | minus: 1 | times: 3 | plus: forloop.index0  -%}
-{%- assign ssize = site.posts.size | minus: ssize  -%}
+{%- assign ssize = site.posts.size | minus: 1 | minus: ssize  -%}
 {%- assign post  = site.posts[ssize]  -%}
   <article>
     {% include meta.html post=post preview=true %}
