--- a/_includes/home.html
+++ b/_includes/home.html
@@ -3,15 +3,12 @@
 
 
 {% for x in paginator.posts %}
-{%- assign ssize = paginator.page | minus: 1 | times: 3 | plus: forloop.index0  -%}
+{%- assign ssize = paginator.page | minus: 1 | times: site.paginate | plus: forloop.index0  -%}
 {%- assign ssize = site.posts.size | minus: 1 | minus: ssize  -%}
 {%- assign post  = site.posts[ssize]  -%}
   <article>
     {% include meta.html post=post preview=true %}
     {{ post.excerpt }}
-    ()
-    {{ ssize }}
-    ()
     <div class="more"><a href="{{ post.url | relative_url }}">read more</a></div>
   </article>
 {% endfor %}
